[gd_scene load_steps=9 format=3 uid="uid://d22n8y3ktukqw"]

[ext_resource type="Script" uid="uid://bxeu234fud20" path="res://Stages/Minesweeper/Minesweeper.gd" id="1_6lce1"]
[ext_resource type="Texture2D" uid="uid://bwc8gae6d0v0y" path="res://Stages/Minesweeper/Background.png" id="2_g6tsg"]
[ext_resource type="PackedScene" uid="uid://c3qxnrolcl2p0" path="res://Entities/Face/Face.tscn" id="3_eec7l"]
[ext_resource type="PackedScene" uid="uid://c4d5ra07ghtik" path="res://Entities/DigitDisplay/DigitDisplay.tscn" id="4_ikxf1"]
[ext_resource type="PackedScene" uid="uid://b3ib650b1xag0" path="res://Entities/MineField/MineField.tscn" id="5_g6tsg"]
[ext_resource type="AudioStream" uid="uid://csm0ilj0oi441" path="res://Stages/Minesweeper/lose.mp3" id="6_eec7l"]
[ext_resource type="AudioStream" uid="uid://dtmwnch4ygqmq" path="res://Stages/Minesweeper/win.mp3" id="7_ikxf1"]
[ext_resource type="AudioStream" uid="uid://cq3jp4w755ca3" path="res://Stages/Minesweeper/tick.mp3" id="8_1g8g8"]

[node name="Minesweeper" type="Node2D"]
script = ExtResource("1_6lce1")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_g6tsg")
centered = false

[node name="ScoreDisplay" parent="." instance=ExtResource("4_ikxf1")]
position = Vector2(95, 17)

[node name="MineDisplay" parent="." instance=ExtResource("4_ikxf1")]
position = Vector2(18, 17)

[node name="Face" parent="." instance=ExtResource("3_eec7l")]
position = Vector2(65, 17)

[node name="MineField" parent="." instance=ExtResource("5_g6tsg")]
position = Vector2(13, 56)

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eec7l")

[node name="GameWonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ikxf1")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_1g8g8")
